<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VehicleNumberActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_VehicleNumberActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/white"
        app:title="@string/create_new_vehicle_profile"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_VehicleNumberActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/margin_30dp"
            android:contentDescription="@string/inspect"
            android:src="@drawable/arrow_forward"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal" />

        <TextView
            android:id="@+id/vehicle_no_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:fontFamily="@font/proximanova_regular"
            android:text="@string/vehicle_number"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/vehicle_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_50dp"
            android:layout_below="@+id/vehicle_no_txt"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/edtdesign"
            android:inputType="textCapCharacters"
            android:paddingStart="@dimen/padding_24dp"
            android:paddingEnd="@dimen/padding_24dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16sp"
            tools:ignore="TextFields" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>