<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VehicleProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:background="@drawable/arrow_back"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/inspect" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_16dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/model_and_fulType_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proximanova_bold"
                    android:gravity="bottom"
                    android:text="@string/vehicles"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vehicle_number_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proximanova_bold"
                    android:gravity="bottom"
                    android:text="@string/vehicles"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/make"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/make_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/make"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/model"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/model_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/make"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/fuel_type"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/fuel_type_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/make"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/transmission"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/transmission_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_regular"
                        android:text="@string/make"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>